# api/docs/swagger.json
@@ -8,6 +8,60 @@
     },
     "basePath": "/v1",
     "paths": {
+        "/application/create": {
+            "post": {
+                "description": "create application",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "application"
+                ],
+                "summary": "create application",
+                "operationId": "create-application",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "request body",
+                        "name": "application",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.ApplicationCreateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/types.ApplicationCreateResponse"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "$ref": "#/definitions/fiber.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/fiber.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/auth_token": {
             "post": {
                 "description": "auth token",
@@ -104,77 +158,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/types.HealthCheckPing"
-                        }
-                    }
-                }
-            }
-        },
-        "/logout": {
-            "get": {
-                "description": "logout user",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "sso"
-                ],
-                "summary": "logout user",
-                "operationId": "logout-user",
-                "responses": {
-                    "302": {
-                        "description": "Done",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/sso": {
-            "post": {
-                "description": "auth cookie",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "sso"
-                ],
-                "summary": "auth cookie",
-                "operationId": "auth-cookie",
-                "parameters": [
-                    {
-                        "description": "request body",
-                        "name": "params",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/types.AuthRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "302": {
-                        "description": "Done",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/fiber.Error"
-                        }
-                    },
-                    "422": {
-                        "description": "Unprocessable Entity",
-                        "schema": {
-                            "$ref": "#/definitions/fiber.Error"
                         }
                     }
                 }
@@ -335,6 +318,37 @@
                 }
             }
         },
+        "types.ApplicationCreateRequest": {
+            "type": "object",
+            "properties": {
+                "application": {
+                    "type": "string"
+                },
+                "domain": {
+                    "type": "string"
+                },
+                "redirect_url": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.ApplicationCreateResponse": {
+            "type": "object",
+            "properties": {
+                "application": {
+                    "type": "string"
+                },
+                "code": {
+                    "type": "string"
+                },
+                "domain": {
+                    "type": "string"
+                },
+                "redirect_url": {
+                    "type": "string"
+                }
+            }
+        },
         "types.AuthRequest": {
             "type": "object",
             "required": [
@@ -392,6 +406,7 @@
         "types.UserCreateRequest": {
             "type": "object",
             "required": [
+                "agreement",
                 "confirm_password",
                 "email",
                 "gender",
@@ -399,6 +414,9 @@
                 "password"
             ],
             "properties": {
+                "agreement": {
+                    "type": "boolean"
+                },
                 "confirm_password": {
                     "type": "string"
                 },
